relesases/v1.0/ReleaseNotes.md
## DeanoIpsum Version xx.xx
**Release Date: xx/xx/xxxx**

> DeanoIpsum: A collection of Theme based Lorem Ipsum Generators

### Upgrade Steps
* Befroe starting, make sure that you have a backup copy of the working app
* Using an FTP Client, access the directory where the app is installed and delete the following:
  * The Assets folder (and its contents)
  * The index.html file.
* Copy the Zip file from the desired release (i.e 1.0zip, 1.2zip, etc...) over to the working directory
* Extract the contents of the zip file into the working directory.
  * Note: If by chance your remote file manager does not let you extract directly into the directory, you can extraxct the contents of your zip files and upload them individually,
* Once you verify that the upgrade works without issue, you can delete the zip file from the remote working directory.

### Breaking Changes
* N/A

### New Features
* Initial Release
* 

### Bug Fixes
* Initial Release
* 

### Performance Improvements
* N/A
* 

### Other Changes
* N/A
* 
